[package]
name = "nihility-common"
version = "0.1.1"
edition = "2021"

[dependencies]
prost = "0.12"
tonic = "0.10"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.35", features = ["sync"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.5"

[build-dependencies]
tonic-build = "0.10"
