[package]
name = "nihility-common"
version = "0.1.1"
edition = "2021"

[dependencies]
prost = "0.12"
tonic = "0.10"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.35", features = ["sync"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.5"
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["sync", "rt", "macros", "rt-multi-thread"] }
time = {version = "0.3", features = ["macros"]}
tracing-subscriber = {version = "0.3", features = ["local-time"]}
